--- a/views/note.html
+++ b/views/note.html
@@ -1,11 +1,38 @@
 <div class="note-container">
-  <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
+
+  <!-- <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
     {{ successMessage }}
   </div>
 
   <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
       {{ errorMessage }}
-  </div>
+  </div> -->
+
+    <div aria-live="polite" aria-atomic="true" style="position: relative;">
+        <div ng-if="successMessage" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" style="position: absolute; top: 10px; right: 10px; z-index: 1;" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="mr-auto">Operation success</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            {{ successMessage }}
+        </div>
+        </div>
+
+        <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" style="position: absolute; top: 10px; right: 10px; z-index: 1;" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="mr-auto">Error</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            {{ errorMessage }}
+        </div>
+        </div>
+    </div>
 
   <div class="modal" tabindex="-1" id="deleteModal">
       <div class="modal-dialog">
