--- a/index.css
+++ b/index.css
@@ -490,6 +490,41 @@ textarea[id="content"], textarea[id="content"]:focus {
     box-shadow: 5px 5px 0px #000000;
 }
 
+/* .toast-alert-centered {
+    z-index: 1;
+    border: 2px solid black !important;
+    box-shadow: 3px 3px 0px #000000 !important;
+    opacity: 1 !important;
+} */
+
+.toast-alert {
+    position: absolute; 
+    top: 10px; 
+    right: 1%;
+    z-index: 1;
+    border: 2px solid black !important;
+    box-shadow: 3px 3px 0px #000000 !important;
+    opacity: 1 !important;
+}
+
+.toast-header-warning {
+    background: #E2442F !important;
+    color: #000000 !important;
+}
+
+.toast-alert-warning {
+    background: #E2442F !important;
+}
+
+.toast-header-success {
+    background: #23A094 !important;
+    color: #000000 !important;
+}
+
+.toast-alert-success {
+    background: #23A094 !important;
+}
+
 @media(max-width: 1200px) {
     .text-container {
         left: 70px;
