--- a/views/createTask.html
+++ b/views/createTask.html
@@ -1,19 +1,22 @@
-<div class="create-task-container d-flex flex-column justify-content-center align-items-center p-5 border">
+<div class="create-task-container d-flex flex-column justify-content-center align-items-center p-5 border position-relative">
     
-    <form ng-submit="createTask()" class="w-75 p-5 create-task-form">
-        <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
-          <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-              <strong class="mr-auto">Error</strong>
-              <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="toast-body">
-              {{ errorMessage }}
-            </div>
-          </div>
+    <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
+            <strong class="mr-auto">Error</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
         </div>
+        <div class="toast-body">
+            {{ errorMessage }}
+        </div>
+    </div>
+
+    <form ng-submit="createTask()" class="w-75 p-5 create-task-form">
+
+        <!-- <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
+          
+        </div> -->
 
         <h2 class="text-center create-task-title">Create new task</h2>
         <div class="form-group">
