--- a/views/landing.html
+++ b/views/landing.html
@@ -28,31 +28,31 @@
 
     <div class="order-xs-1 col-xs-12 col-lg-6 login-form-layout p-5">
 
-      <div aria-live="polite" aria-atomic="true" style="position: relative;">
-        <div ng-if="loginError" ng-class="{'toast show': true, 'hide': loginError == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
-          <div class="toast-header">
-            <strong class="mr-auto">Login error</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="toast-body">
-            {{ loginError }}
-          </div>
-        </div>
+        <div aria-live="polite" aria-atomic="true" class="position-relative">
+            <div ng-if="loginError" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': loginError == null}" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header toast-header-warning">
+                    <strong class="mr-auto">Login error</strong>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    {{ loginError }}
+                </div>
+            </div>
 
-        <div ng-if="successMessage" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 0; right: 0;">
-          <div class="toast-header">
-            <strong class="mr-auto">Log out success</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="toast-body">
-            {{ successMessage }}
-          </div>
+            <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header toast-header-success">
+                    <strong class="mr-auto">Success</strong>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    {{ successMessage }}
+                </div>
+            </div>
         </div>
-      </div>
 
       <form ng-submit="loginUser()" name="loginForm" class="p-5 login-form" novalidate>
         <h1 id="login-title">Login here</h1>
