--- a/views/noteView.html
+++ b/views/noteView.html
@@ -1,31 +1,34 @@
-<div class="note-view-container d-flex flex-column justify-content-center align-items-center p-5">
+<div class="note-view-container d-flex flex-column justify-content-center align-items-center p-5 position-relative">
 
-    <form class="note-view-form w-75 p-5">
-        <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
-            <div ng-if="noteErrorMessage" ng-class="{'toast show': true, 'hide': noteErrorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
-              <div class="toast-header">
-                <strong class="mr-auto">Error</strong>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="toast-body">
-                {{ noteErrorMessage }}
-              </div>
-            </div>
-        
-            <div ng-if="noteDoesNotExistError" ng-class="{'toast show': true, 'hide': noteDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true">
-              <div class="toast-header">
-                <strong class="mr-auto">Error</strong>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="toast-body">
-                {{ noteDoesNotExistError }}
-              </div>
-            </div>
+    <div ng-if="noteErrorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': noteErrorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
+          <strong class="mr-auto">Error</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="toast-body">
+          {{ noteErrorMessage }}
+        </div>
+    </div>
+  
+    <div ng-if="noteDoesNotExistError" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': noteDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
+          <strong class="mr-auto">Error</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+          {{ noteDoesNotExistError }}
+        </div>
+    </div>
+
+    <form class="note-view-form w-75 p-5 ">
+
+        <!-- <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
+            
+        </div> -->
 
         <div class="form-group">
             <label for="title">Title</label>
