--- a/views/register.html
+++ b/views/register.html
@@ -1,11 +1,24 @@
-<div class="d-flex flex-column justify-content-center align-items-center register-page-layout">
+<div class="d-flex flex-column justify-content-center align-items-center register-page-layout position-relative">
+
+    <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
+          <strong class="mr-auto">Error</strong>
+          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="toast-body">
+          {{ errorMessage }}
+        </div>
+    </div>
+
     <div class="d-flex justify-content-end w-75">
         <span class="align-self-end back-button" title="Back"><a href="#!/"><i class='bx bx-arrow-back'></i></a></span>
     </div>
     
-    <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
-        <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true" style="z-index: 1;">
-          <div class="toast-header">
+    <!-- <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" class="position-relative">
+        <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header toast-header-warning">
             <strong class="mr-auto">Error</strong>
             <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
               <span aria-hidden="true">&times;</span>
@@ -15,7 +28,7 @@
             {{ errorMessage }}
           </div>
         </div>
-    </div>
+    </div> -->
 
     <h2 id="register-title">Register here</h2>
 
