--- a/views/taskView.html
+++ b/views/taskView.html
@@ -1,9 +1,7 @@
-<div class="task-view-container d-flex flex-column justify-content-center align-items-center p-5">
+<div class="task-view-container d-flex flex-column justify-content-center align-items-center p-5 position-relative">
 
-  <form class="task-view-form w-75 p-5">
-    <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
-      <div ng-if="errorMessage" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
+    <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
           <strong class="mr-auto">Error</strong>
           <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -12,10 +10,10 @@
         <div class="toast-body">
           {{ errorMessage }}
         </div>
-      </div>
+    </div>
   
-      <div ng-if="taskDoesNotExistError" ng-class="{'toast show': true, 'hide': taskDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
+    <div ng-if="taskDoesNotExistError" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': taskDoesNotExistError == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
           <strong class="mr-auto">Error</strong>
           <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -24,16 +22,21 @@
         <div class="toast-body">
           {{ taskDoesNotExistError }}
         </div>
-      </div>
     </div>
+
+  <form class="task-view-form w-75 p-5">
+
+    <!-- <div class="d-flex justify-content-center align-items-center" aria-live="polite" aria-atomic="true" style="position: relative;">
+      
+    </div> -->
 
     <div class="form-group">
         <label for="title">Title</label>
         <input ng-model="specificTask.title" ng-readonly="readOnly" type="text" class="form-control" id="title" >
     </div>
     <div class="form-group">
-      <label for="description">Description</label>
-      <textarea ng-model="specificTask.description" ng-readonly="readOnly" class="form-control" id="description" placeholder="Enter description"></textarea>
+        <label for="description">Description</label>
+        <textarea ng-model="specificTask.description" ng-readonly="readOnly" class="form-control" id="description" placeholder="Enter description"></textarea>
     </div>
     <div class="form-group">
         <label for="deadline">Deadline</label>
@@ -44,15 +47,15 @@
         <input ng-model="specificTask.status" ng-readonly="readOnly" type="text" class="form-control" id="status">
     </div>
     <div class="form-group">
-      <label for="color">Color</label>
-      <select ng-model="specificTask.color" ng-init="specificTask.color = specificTask.color || ''" ng-disabled="readOnly" id="color" class="form-control">
-        <option value=""></option>
-        <option value="Green">Green</option>
-        <option value="Pink">Pink</option>
-        <option value="Red">Red</option>
-        <option value="White">White</option>
-        <option value="Yellow">Yellow</option>
-      </select>
+        <label for="color">Color</label>
+        <select ng-model="specificTask.color" ng-init="specificTask.color = specificTask.color || ''" ng-disabled="readOnly" id="color" class="form-control">
+            <option value=""></option>
+            <option value="Green">Green</option>
+            <option value="Pink">Pink</option>
+            <option value="Red">Red</option>
+            <option value="White">White</option>
+            <option value="Yellow">Yellow</option>
+        </select>
     </div>
     <div class="d-flex justify-content-sm-center justify-content-md-end">
         <button ng-click="toggleReadOnly()" class="btn btn-success">Edit</button>
