--- a/views/users.html
+++ b/views/users.html
@@ -1,11 +1,38 @@
 <div class="users-container">
-    <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
+
+    <div aria-live="polite" aria-atomic="true" class="position-relative">
+        <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-success">
+            <strong class="mr-auto">Success</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            {{ successMessage }}
+        </div>
+        </div>
+
+        <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" style="position: absolute; top: 10px; right: 10px; z-index: 1;" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header toast-header-warning">
+            <strong class="mr-auto">Error</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            {{ errorMessage }}
+        </div>
+        </div>
+    </div>
+
+    <!-- <div ng-if="successMessage" class="alert alert-success alert-dismissible fade show w-75" role="alert" id="success-alert">
         {{ successMessage }}
     </div>
     
     <div ng-if="errorMessage" class="alert alert-danger alert-dismissible fade show w-75" role="alert" id="error-alert">
         {{ errorMessage }}
-    </div>
+    </div> -->
     
     <div class="row px-3 mx-3">
         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="user in users">
