--- a/views/task.html
+++ b/views/task.html
@@ -27,8 +27,8 @@
   </div>
 
   <div class="modal" tabindex="-1" id="deleteModal">
-      <div class="modal-dialog">
-        <div class="modal-content">
+      <div class="modal-dialog delete-modal">
+        <div class="modal-content rounded-0">
           <div class="modal-header">
             <h5 class="modal-title">Confirm</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -36,11 +36,11 @@
             </button>
           </div>
           <div class="modal-body">
-            <p>Are you sure you want to delete this task?</p>
+            <p class="text-center">Are you sure you want to delete this task?</p>
           </div>
           <div class="modal-footer">
-              <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary" data-dismiss="modal" >Yes</button>
-              <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary action-buttons-layout" data-dismiss="modal" >Yes</button>
+              <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-danger action-buttons-layout" data-dismiss="modal">Cancel</button>
           </div>
         </div>
       </div>
