--- a/index.css
+++ b/index.css
@@ -518,6 +518,116 @@ textarea[id="content"], textarea[id="content"]:focus {
     background: #23A094 !important;
 }
 
+/* ---------- LOADING BLOCK SCREEN ------------ */
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.loader {
+    --size: 90px;
+    display: flex;
+    column-gap: 40px;
+}
+   
+.box {
+    width: var(--size);
+    height: var(--size);
+    background: #23A094;
+    animation: rotate 2s infinite;
+    border: 3px solid #000000;
+}
+   
+.box:nth-child(2) {
+    animation-delay: 0.25s;
+    background: #FF90E8;
+}
+   
+.box:nth-child(3) {
+    animation-delay: 0.5s;
+    background: #FFC900;
+}
+   
+@keyframes rotate {
+    50% {
+        transform: rotate(180deg)
+    }
+}
+
+/* .spinner {
+    --size: 70px;
+    --first-block-clr: #23A094;
+    --second-block-clr: #FFC900;
+    --clr: #111;
+    width: 100px;
+    height: 100px;
+    position: relative;
+}
+   
+.spinner::after,.spinner::before {
+    box-sizing: border-box;
+    position: absolute;
+    content: "";
+    width: var(--size);
+    height: var(--size);
+    top: 50%;
+    animation: up 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
+    left: 50%;
+    background: var(--first-block-clr);
+}
+   
+.spinner::after {
+    background: var(--second-block-clr);
+    top: calc(50% - var(--size));
+    left: calc(50% - var(--size));
+    animation: down 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
+}
+   
+@keyframes down {
+    0%, 100% {
+     transform: none;
+    }
+   
+    25% {
+     transform: translateX(100%);
+    }
+   
+    50% {
+     transform: translateX(100%) translateY(100%);
+    }
+   
+    75% {
+     transform: translateY(100%);
+    }
+}
+   
+@keyframes up {
+    0%, 100% {
+        transform: none;
+    }
+
+    25% {
+        transform: translateX(-100%);
+    }
+
+    50% {
+        transform: translateX(-100%) translateY(-100%);
+    }
+
+    75% {
+        transform: translateY(-100%);
+    }
+} */
+/* ---------- END OF LOADING BLOCK SCREEN ------------ */
+
 @media(max-width: 1200px) {
     .text-container {
         left: 70px;
