--- a/views/landing.html
+++ b/views/landing.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+            <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show slide-right': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header toast-header-success">
                     <strong class="mr-auto">Success</strong>
                     <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
