--- a/index.css
+++ b/index.css
@@ -396,6 +396,10 @@ input[type="submit"]:hover{
     width: auto;
     max-height: 350px;
     min-height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
 }
 
 .action-buttons-layout {
