--- a/views/note.html
+++ b/views/note.html
@@ -47,6 +47,14 @@
   </div>
 
   <div class="row px-3 mx-3">
+
+    <div ng-show="emptyNote" class="d-flex flex-column justify-content-center align-items-center w-100 vh-100">
+        <div class="image-container">
+            <img src="../assets/empty-note.png" alt="empty_note" class="img-fluid">
+            <h1 class="responsive-title">You don't have notes yet.</a></h1>
+        </div>
+    </div>
+    
       <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="note in notes | startFrom : (currentPage - 1) * pageSize | limitTo: pageSize">
         <div ng-class="note.attributes.color" class="card-layout my-4 mx-2 p-4">
           <h5>{{ note.attributes.title }}</h5>
