--- a/views/task.html
+++ b/views/task.html
@@ -1,71 +1,71 @@
 <div class="task-container">
 
-  <div aria-live="polite" aria-atomic="true" class="position-relative">
-    <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header toast-header-warning">
-        <strong class="mr-auto">Error</strong>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="toast-body">
-        {{ errorMessage }}
-      </div>
+    <div aria-live="polite" aria-atomic="true" class="position-relative">
+        <div ng-if="errorMessage" class="toast-alert toast-alert-warning" ng-class="{'toast show': true, 'hide': errorMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header toast-header-warning">
+            <strong class="mr-auto">Error</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="toast-body">
+            {{ errorMessage }}
+            </div>
+        </div>
+
+        <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header toast-header-success">
+            <strong class="mr-auto">Operation success</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="toast-body">
+            {{ successMessage }}
+            </div>
+        </div>
     </div>
 
-    <div ng-if="successMessage" class="toast-alert toast-alert-success" ng-class="{'toast show': true, 'hide': successMessage == null}" role="alert" aria-live="assertive" aria-atomic="true">
-      <div class="toast-header toast-header-success">
-        <strong class="mr-auto">Operation success</strong>
-        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="toast-body">
-        {{ successMessage }}
-      </div>
-    </div>
-  </div>
-
-  <div class="modal" tabindex="-1" id="deleteModal">
-      <div class="modal-dialog delete-modal">
+    <div class="modal" tabindex="-1" id="deleteModal">
+        <div class="modal-dialog delete-modal">
         <div class="modal-content rounded-0">
-          <div class="modal-header">
+            <div class="modal-header">
             <h5 class="modal-title">Confirm</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true">&times;</span>
             </button>
-          </div>
-          <div class="modal-body">
+            </div>
+            <div class="modal-body">
             <p class="text-center">Are you sure you want to delete this task?</p>
-          </div>
-          <div class="modal-footer">
-              <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary action-buttons-layout" data-dismiss="modal" >Yes</button>
-              <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-danger action-buttons-layout" data-dismiss="modal">Cancel</button>
-          </div>
+            </div>
+            <div class="modal-footer">
+                <button ng-click="confirmDelete=true; deleteTask()" type="button" class="btn btn-primary action-buttons-layout" data-dismiss="modal" >Yes</button>
+                <button ng-click="goBackToPreviousRoute()" type="button" class="btn btn-danger action-buttons-layout" data-dismiss="modal">Cancel</button>
+            </div>
         </div>
-      </div>
-  </div>
+        </div>
+    </div>
 
   <div class="row px-3 mx-3">
 
     <div ng-show="emptyTask" class="d-flex flex-column justify-content-center align-items-center w-100 vh-100">
         <div class="image-container">
             <img src="../assets/empty-task.png" alt="empty_task" class="img-fluid">
-            <h1 class="responsive-title">You don't have task yet.</h1>
+            <h1 class="responsive-title">You don't have tasks yet.</h1>
         </div>
     </div>
 
-      <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="task in tasks | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize">
+    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 col-xs-12" ng-repeat="task in tasks | startFrom: (currentPage - 1) * pageSize | limitTo: pageSize">
         <div ng-class="task.attributes.color" class="card-layout my-4 mx-2 p-4">
-          <h5>{{ task.attributes.title }}</h5>
-          <p>{{ task.attributes.description }}</p>
-          <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
-          <p>Active: {{ task.attributes.is_active }}</p>
-          <p>Created: <time>{{ task.attributes.created }}</time></p>
-          <p>Modified: <time>{{ task.attributes.modified }}</time></p>
-          <p ng-show="isAdmin == 'true' || isAdmin == true">User: {{ task.attributes.user }}</p>
+            <h5>{{ task.attributes.title }}</h5>
+            <p>{{ task.attributes.description }}</p>
+            <p>Deadline: <time>{{ task.attributes.deadline }}</time></p>
+            <p>Active: {{ task.attributes.is_active }}</p>
+            <p>Created: <time>{{ task.attributes.created }}</time></p>
+            <p>Modified: <time>{{ task.attributes.modified }}</time></p>
+            <p ng-show="isAdmin == 'true' || isAdmin == true">User: {{ task.attributes.user }}</p>
 
-          <div class="d-flex justify-content-center button-container">
+            <div class="d-flex justify-content-center button-container">
             <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/{{ task.id }}" class="btn btn-primary action-buttons-layout" title="More details"><i class='bx bx-dots-horizontal-rounded'></i></a>
 
             <a ng-hide="isAdmin == 'true' || isAdmin == true" href="#!/task/delete/{{ task.id }}" class="btn btn-danger action-buttons-layout" title="Delete" data-toggle="modal" data-target="#deleteModal"><i class='bx bx-trash'></i></a>
@@ -73,10 +73,11 @@
             <button ng-click="archiveTask(task.id)" ng-show="{{ task.attributes.is_active == true && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-warning action-buttons-layout" title="Archive"><i class='bx bx-archive-in'></i></button>
 
             <button ng-click="activateTask(task.id)" ng-show="{{ task.attributes.is_active == false && (isAdmin == 'false' || isAdmin == false) }}" class="btn btn-info action-buttons-layout" title="Activate"><i class='bx bx-archive-out'></i></button>
-          </div>
+            </div>
         </div>
-      </div>
-      <nav aria-label="Task page navigation" class="fixed-bottom">
+    </div>
+
+    <nav aria-label="Task page navigation" class="fixed-bottom">
         <ul class="pagination justify-content-center">
             <li class="page-item">
                 <a class="page-link" ng-click="prevPage()">
@@ -90,10 +91,10 @@
                 </a>
             </li>
         </ul>
-      </nav>
+    </nav>
   </div>
 
-  <div class="d-flex justify-content-end">
-      <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task" class="add-button"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
-  </div>
+    <div class="d-flex justify-content-end">
+        <a ng-show="isAdmin == 'false' || isAdmin == false" href="#!/create-task" class="add-button"><i class='bx bx-plus-circle bx-flip-vertical' ></i></a>
+    </div>
 </div>
